tests/snapshots/snapshots__acknowledgements-2.snap
---
source: tests/snapshots.rs
expression: "json(&Acknowledgement::failure(Code::UnknownEvseId))"
---
{
  "Result": false,
  "StatusCode": {
    "Code": "603",
    "Description": "Unknown EVSE ID"
  }
}
