tests/snapshots/snapshots__acknowledgements.snap
---
source: tests/snapshots.rs
expression: "json(&Acknowledgement::success())"
---
{
  "Result": true,
  "StatusCode": {
    "Code": "000",
    "Description": "Success"
  }
}
