tests/snapshots/snapshots__charge_detail_record.snap
---
source: tests/snapshots.rs
expression: "json(&samples::charge_detail_record(\"DE*ABC*E1\", samples::session_id()))"
---
{
  "SessionID": "f98efba4-02d8-4fa0-b810-9a9d50d2c527",
  "PartnerProductID": "AC 1",
  "EvseID": "DE*ABC*E1",
  "Identification": {
    "RFIDMifareFamilyIdentification": {
      "UID": "7568290FFF765F"
    }
  },
  "ChargingStart": "2020-09-23T14:05:00.000Z",
  "ChargingEnd": "2020-09-23T15:05:00.000Z",
  "SessionStart": "2020-09-23T14:00:00.000Z",
  "SessionEnd": "2020-09-23T15:10:00.000Z",
  "MeterValueStart": 0,
  "MeterValueEnd": 10,
  "ConsumedEnergy": 10
}
