tests/snapshots/snapshots__urls_against_the_two_hubject_environments.snap
---
source: tests/snapshots.rs
expression: rendered
---
https://service-qa.hubject.com/api/oicp/charging/v21/operators/DE*ABC/authorize/start
https://service-qa.hubject.com/api/oicp/charging/v21/operators/DE*ABC/authorize/stop
https://service-qa.hubject.com/api/oicp/charging/v21/providers/DE-DCB/authorize-remote/start
https://service-qa.hubject.com/api/oicp/charging/v21/providers/DE-DCB/authorize-remote/stop
https://service-qa.hubject.com/api/oicp/cdrmgmt/v22/operators/DE*ABC/charge-detail-record
https://service-qa.hubject.com/api/oicp/cdrmgmt/v22/providers/DE-DCB/get-charge-detail-records-request
https://service-qa.hubject.com/api/oicp/authdata/v21/providers/DE-DCB/push-request
https://service-qa.hubject.com/api/oicp/reservation/v11/providers/DE-DCB/reservation-start-request
https://service-qa.hubject.com/api/oicp/reservation/v11/providers/DE-DCB/reservation-stop-request
https://service-qa.hubject.com/api/oicp/evsepush/v23/operators/DE*ABC/data-records
https://service-qa.hubject.com/api/oicp/evsepull/v23/providers/DE-DCB/data-records
https://service-qa.hubject.com/api/oicp/evsepush/v21/operators/DE*ABC/status-records
https://service-qa.hubject.com/api/oicp/evsepull/v21/providers/DE-DCB/status-records
https://service-qa.hubject.com/api/oicp/dynamicpricing/v10/operators/DE*ABC/pricing-products
https://service-qa.hubject.com/api/oicp/dynamicpricing/v10/providers/DE-DCB/pricing-products
https://service-qa.hubject.com/api/oicp/dynamicpricing/v10/operators/DE*ABC/evse-pricing
https://service-qa.hubject.com/api/oicp/dynamicpricing/v10/providers/DE-DCB/evse-pricing
https://service-qa.hubject.com/api/oicp/notificationmgmt/v11/charging-notifications
https://service.hubject.com/api/oicp/charging/v21/operators/DE*ABC/authorize/start
https://service.hubject.com/api/oicp/charging/v21/operators/DE*ABC/authorize/stop
https://service.hubject.com/api/oicp/charging/v21/providers/DE-DCB/authorize-remote/start
https://service.hubject.com/api/oicp/charging/v21/providers/DE-DCB/authorize-remote/stop
https://service.hubject.com/api/oicp/cdrmgmt/v22/operators/DE*ABC/charge-detail-record
https://service.hubject.com/api/oicp/cdrmgmt/v22/providers/DE-DCB/get-charge-detail-records-request
https://service.hubject.com/api/oicp/authdata/v21/providers/DE-DCB/push-request
https://service.hubject.com/api/oicp/reservation/v11/providers/DE-DCB/reservation-start-request
https://service.hubject.com/api/oicp/reservation/v11/providers/DE-DCB/reservation-stop-request
https://service.hubject.com/api/oicp/evsepush/v23/operators/DE*ABC/data-records
https://service.hubject.com/api/oicp/evsepull/v23/providers/DE-DCB/data-records
https://service.hubject.com/api/oicp/evsepush/v21/operators/DE*ABC/status-records
https://service.hubject.com/api/oicp/evsepull/v21/providers/DE-DCB/status-records
https://service.hubject.com/api/oicp/dynamicpricing/v10/operators/DE*ABC/pricing-products
https://service.hubject.com/api/oicp/dynamicpricing/v10/providers/DE-DCB/pricing-products
https://service.hubject.com/api/oicp/dynamicpricing/v10/operators/DE*ABC/evse-pricing
https://service.hubject.com/api/oicp/dynamicpricing/v10/providers/DE-DCB/evse-pricing
https://service.hubject.com/api/oicp/notificationmgmt/v11/charging-notifications
